--- a/ThermostatExam/ThermostatTest/ThermostatTest.vcxproj.filters
+++ b/ThermostatExam/ThermostatTest/ThermostatTest.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="doubles">
+      <UniqueIdentifier>{18b020e1-5d33-4426-bcec-f84eb6cb1f84}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AllTests.cpp">
@@ -21,5 +24,13 @@
     <ClCompile Include="ThermostatTest.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ControlPanelSpy.cpp">
+      <Filter>doubles</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ContolPanelSpy.h">
+      <Filter>doubles</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
