--- a/ThermostatExam/requirements.txt
+++ b/ThermostatExam/requirements.txt
@@ -6,7 +6,8 @@
  냉난방기는 히터/쿨러와 송풍팬으로 구성된다.
  히터와 쿨러는 각각 on/off로만 동작 한다.
  송풍팬의 rpm을 조절할 수 있다.
- 온도 조절 장치의 동작 상태가 제어판에 LED점등으로 표시된다.
-  - 히터가 동작중일때는 LED가 붉은 색으로 켜진다.
-  - 쿨러가 동작중일때는 LED가 푸른 색으로 켜진다.
-  - 둘 다 동작하지 않을 때는 LED가 꺼진다.
+ 설정 온도와 현재 온도의 차이가 큰 경우 급속 냉/난방을 실시한다.
+  - 설정온도와의 차가 10도가 넘는 경우 500rpm으로 송풍팬을 구동한다.
+  - 설정온도와의 차가 5~10도 인 경우 200rpm으로 송풍팬을 구동한다.
+  - 설정온도와의 차가 2도 이하인 경우 송풍팬을 정지한다.
+ 설정 온도와 현재 온도가 일치하는 경우 히터나 쿨러를 정지한다.
