--- a/ThermostatExam/ThermostatExam/ThermostatExam.vcxproj
+++ b/ThermostatExam/ThermostatExam/ThermostatExam.vcxproj
@@ -47,11 +47,12 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <MinimalRebuild>true</MinimalRebuild>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -76,11 +77,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ControlPanel.c" />
+    <ClCompile Include="CoolerController.c" />
+    <ClCompile Include="FanController.c" />
+    <ClCompile Include="HeaterController.c" />
+    <ClCompile Include="SensorProbe.c" />
     <ClCompile Include="Thermostat.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ControlPanel.h" />
+    <ClInclude Include="CoolerController.h" />
+    <ClInclude Include="FanController.h" />
+    <ClInclude Include="HeaterController.h" />
+    <ClInclude Include="SensorProbe.h" />
     <ClInclude Include="Thermostat.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
